build/00010/H4P_MQTT_Wildcards_nodemcuv2.log
Processing nodemcuv2 (platform: espressif8266@4.2.0; board: nodemcuv2; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing platformio/tool-esptoolpy @ ~1.30000.0
Unpacking 0% 10% 20% 30% 40% 50% 60% 70% 80% 90% 100%
Tool Manager: tool-esptoolpy@1.30000.201119 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif8266/nodemcuv2.html
PLATFORM: Espressif 8266 (4.2.0) > NodeMCU 1.0 (ESP-12E Module)
HARDWARE: ESP8266 80MHz, 80KB RAM, 4MB Flash
PACKAGES: 
 - framework-arduinoespressif8266 @ 3.30102.0 (3.1.2) 
 - tool-esptool @ 1.413.0 (4.13) 
 - tool-esptoolpy @ 1.30000.201119 (3.0.0) 
 - toolchain-xtensa @ 2.100300.220621 (10.3.0)
Converting H4P_MQTT_Wildcards.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 45 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- ESPAsyncUDP @ 0.0.0-alpha+sha.697c75a025
|-- LittleFS @ 0.1.0
|-- ESP8266WiFi @ 1.0
|-- ESP8266mDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- ESP8266httpUpdate @ 1.3
|-- ESP8266HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:34:48: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9], const char [8])'
   34 | H4P_WiFi h4wifi("XXXXXXXX","XXXXXXXX","testbed");
      |                                                ^
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 3 provided
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:35:47: error: no matching function for call to 'H4P_AsyncMQTT::H4P_AsyncMQTT(const char [24])'
   35 | H4P_AsyncMQTT h4mqtt("http://192.168.1.4:1883"); // no username / pword
      |                                               ^
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:71:9: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_LWT)'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |         ^~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:71:31: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_LWT'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |                       ~~~~~~~~^~~~~~~~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(const H4P_AsyncMQTT&)'
   46 | class H4P_AsyncMQTT: public H4Service, public H4AsyncMQTT{
      |       ^~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'const H4P_AsyncMQTT&'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_AsyncMQTT&&)'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_AsyncMQTT&&'
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Service.h:33,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncHTTP.h:32,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:9,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:1:
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino: In function 'uint32_t myCallback(std::vector<std::__cxx11::basic_string<char> >)':
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:44:41: error: 'string' was not declared in this scope
   44 |       h4mqtt.publishDevice("dealt",CSTR(string(vs.back()+" of "+suit)));
      |                                         ^~~~~~
.pio/libdeps/nodemcuv2/H4Tools/src/H4Tools.h:60:17: note: in definition of macro 'CSTR'
   60 | #define CSTR(x) x.c_str()
      |                 ^
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino:44:41: note: suggested alternatives:
   44 |       h4mqtt.publishDevice("dealt",CSTR(string(vs.back()+" of "+suit)));
      |                                         ^~~~~~
.pio/libdeps/nodemcuv2/H4Tools/src/H4Tools.h:60:17: note: in definition of macro 'CSTR'
   60 | #define CSTR(x) x.c_str()
      |                 ^
In file included from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/iosfwd:39,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/iterator:64,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/ranges_algobase.h:36,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/ranges_algo.h:35,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/algorithm:64,
                 from /home/runner/.platformio/packages/framework-arduinoespressif8266/cores/esp8266/Arduino.h:229,
                 from /tmp/tmpxmk94wjn:1:
/home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/stringfwd.h:79:33: note:   'std::string'
   79 |   typedef basic_string<char>    string;
      |                                 ^~~~~~
In file included from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/locale_classes.h:40,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/ios_base.h:41,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/streambuf:41,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/streambuf_iterator.h:35,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/iterator:66,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/ranges_algobase.h:36,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/bits/ranges_algo.h:35,
                 from /home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/algorithm:64,
                 from /home/runner/.platformio/packages/framework-arduinoespressif8266/cores/esp8266/Arduino.h:229,
                 from /tmp/tmpxmk94wjn:1:
/home/runner/.platformio/packages/toolchain-xtensa/xtensa-lx106-elf/include/c++/10.3.0/string:67:11: note:   'std::pmr::string'
   67 |     using string    = basic_string<char>;
      |           ^~~~~~
*** [.pio/build/nodemcuv2/src/H4P_MQTT_Wildcards.ino.cpp.o] Error 1
========================== [FAILED] Took 4.39 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
nodemcuv2      FAILED    00:00:04.386
==================== 1 failed, 0 succeeded in 00:00:04.386 ====================